# Acumen

./: .gitignore  Cargo.toml  Forc.toml
frnt/: package-lock.json  package.json
frnt/public/: index.html
frnt/src/: App.css  App.tsx  Config.tsx  home.css  home.tsx  pools.css  pools.tsx  utils.ts
frnt/src/assets/css/: app-page.css  dashboard-popup.css  please-connect.css  popup.css  process-popup.css  responsive.css  senior-pool.css  style.css  terms-popup.css  third-popup.css  wallet-connect-2.css  wallet-connect.css
frnt/src/assets/fonts/: ProximaNova-Bold.eot  ProximaNova-Regular.eot  ProximaNova-Semibold.eot
frnt/src/assets/js/: custom.js
frnt/src/contracts/: AcumenAbi.d.ts  index.ts
frnt/src/contracts/factories/: AcumenAbi__factory.ts
frnt/src/includes/: footer.php  head.php  header.php  navbar.tsx
src/: errors.sw  events.sw  interface.sw  main.sw  numbers.sw
tests/: harness.rs
