[project]
name = "counter_contract"
version = "0.1.0"
authors = ["Zach Miller"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.22", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
